--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
  }
 
 h1 {
-	font-family: Raleway, sans serif;
+	font-family: Raleway, 'sans serif';
 	letter-spacing: 1px;
 	font-weight: 400;
 	font-size: 45px;
@@ -21,7 +21,7 @@ h1 {
 a {
 	margin: 0 20px;
 	color: #FFFFFF;	
-	font-family: Raleway, sans serif;
+	font-family: Raleway, 'sans serif';
 	letter-spacing: 1px;
 	font-weight: 600;
 	font-size: 18px;
@@ -52,7 +52,7 @@ img {
 }
 
 h2 {
-	font-family: Raleway, sans serif;
+	font-family: Raleway, 'sans serif';
 	color: #0D2C40;
 	letter-spacing: 1px;
 	font-weight: 600;
@@ -65,6 +65,16 @@ p {
 	line-height: 26px;
 	font-size: 18px;
 
+}
+
+button {
+	font-family: Raleway, 'sans serif';
+	color: white;
+	font-weight: 500;
+	background-color: #00A6B3;
+	border-color: white;
+	padding: 3px 8px; 
+	margin: 10px;
 }
 
 footer {
@@ -101,3 +111,4 @@ font-size: 0;
 	color: #F15B31;
 	font-weight: 700;
 }
+
